finall css merge bugs

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -2354,29 +2354,13 @@
                         <label for="time1" class="label">Time:</label>
                         <select id="time1" class="input">
                             <option value="">Time</option>
-                            <option value="5">5 mins</option>
-                            <option value="10">10 mins</option>
                             <option value="15">15 mins</option>
-                            <option value="20">20 mins</option>
-                            <option value="25">25 mins</option>
                             <option value="30">30 mins</option>
-                            <option value="35">35 mins</option>
-                            <option value="40">40 mins</option>
                             <option value="45">45 mins</option>
-                            <option value="50">50 mins</option>
-                            <option value="55">55 mins</option>
                             <option value="60">60 mins</option>
-                            <option value="65">1h 5 mins</option>
-                            <option value="70">1h 10 mins</option>
                             <option value="75">1h 15 mins</option>
-                            <option value="80">1h 20 mins</option>
-                            <option value="85">1h 25 mins</option>
                             <option value="90">1h 30 mins</option>
-                            <option value="95">1h 35 mins</option>
-                            <option value="100">1h 40 mins</option>
                             <option value="105">1h 45 mins</option>
-                            <option value="110">1h 50 mins</option>
-                            <option value="115">1h 55 mins</option>
                             <option value="120">2h</option>
                         </select>
                     </div>
@@ -2414,13 +2398,15 @@
                     </div>
                 </div>
 
-            <div class = "input-row-center formEnd">
+            <div class = "input-block formEnd">
+            <div class = "input-row">
 
-                <div class = "input-block">
-                    <label for="assignHomework" class="label">Assign Homework:</label>
-                    <button id = "assignHomework" class = "button" onclick="openForm('homeworkTestsForm', 'assign')">Assign Homework</button>
-                </div>
+                  <div class = "input-block">
+                      <label for="assignHomework" class="label">Assign Homework:</label>
+                      <button id = "assignHomework" class = "button2" onclick="openForm('homeworkTestsForm', 'assign')">Assign Homework</button>
+                  </div>
 
+            </div>
             </div>
 
             <div id = "homeworkBreak" class = "line">
