--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -41,6 +41,37 @@
             <form onsubmit="return false">
                 <div class="input-row">
                     <div class="input-block">
+                        <h4>Initial Composite:</h4>
+                        <h2 id="updated-composite-initial"></h2>
+                    </div>
+                </div>
+
+                <div class="input-row">
+                    <div class="input-block">
+                        <label for="updated-english-initial" class="label">Initial English:</label>
+                        <input id="updated-english-initial" min="0" max="36" placeholder="24" class="input score" onchange="updateModalCompositeInitials(); initialsUpdated()">
+                    </div>
+                    
+                    <div class="input-block">
+                        <label for="updated-math-initial" class="label">Initial Math:</label>
+                        <input id="updated-math-initial" min="0" max="36" placeholder="24" class="input score" onchange="updateModalCompositeInitials(); initialsUpdated()">
+                    </div>
+                </div>
+
+                <div class="input-row">
+                    <div class="input-block">
+                        <label for="updated-reading-initial" class="label">Initial Reading:</label>
+                        <input id="updated-reading-initial" min="0" max="36" placeholder="24" class="input score" onchange="updateModalCompositeInitials(); initialsUpdated()">
+                    </div>
+
+                    <div class="input-block">
+                        <label for="updated-science-initial" class="label">Initial Science:</label>
+                        <input id="updated-science-initial" min="0" max="36" placeholder="24" class="input score" onchange="updateModalCompositeInitials(); initialsUpdated()">
+                    </div>
+                </div><br>
+
+                <div class="input-row">
+                    <div class="input-block">
                         <h4>Composite Goal:</h4>
                         <h2 id="updated-composite-goal"></h2>
                     </div>
@@ -84,7 +115,7 @@
 
                 <div class="input-row">
                     <button type = button id="update-goals-closeBtn" class="button" onclick="closeModal('update-goals-section')">back</button> 
-                    <button type = button id="update-goals-submitBtn" class="button" onclick="submitUpdatedGoals()">submit</button>
+                    <button type = button id="update-goals-submitBtn" class="button" onclick="submitUpdatedInfo()">submit</button>
                 </div>
 
             </form>
