a bunch of stuff

--- a/public/Dashboard/Secretary.html
+++ b/public/Dashboard/Secretary.html
@@ -30,7 +30,7 @@
 
     <section>
       <div class="header">
-        <h1 id="locationName"></h1>
+        <h2 id="secretary-name"></h2>
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
 
