mainly handling errors

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -128,157 +128,157 @@
             <div id="student-general-info">
                 <h1 id="student-name"></h1>
                 <div class="flex-row">
-                <p>Next Test:</p>
-                <p id="next-test-date"></p>
+                    <p>Next Test:</p>
+                    <p id="next-test-date"></p>
                 </div>
                 <div class="flex-row">
-                <p id="test-days-left"></p>
-                <p>Days Left</p>
+                    <p id="test-days-left"></p>
+                    <p>Days Left</p>
                 </div>
             </div>
             <div class="flex-row"  onclick="openUpdateGoals()">
                 <div class="score-box composite">
                 <p id="composite-score"></p>
                 <div class="tooltip">
-                    <div class="flex-row">
-                    <p>Goal:</p>
-                    <p id="composite-goal">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Initial Score:</p>
+                        <p id="composite-initial-score">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Hours:</p>
-                    <p id="composite-total-hours">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Goal:</p>
+                        <p id="composite-goal">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Highest Score:</p>
-                    <p id="composite-highest-score">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Total Hours:</p>
+                        <p id="composite-total-hours">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Initial Score:</p>
-                    <p id="composite-initial-score">00</p>
+                    <!-- <div class="flex-row justify-space-between">
+                        <p>Highest Score:</p>
+                        <p id="composite-highest-score">00</p>
+                    </div> -->
+                    <div class="flex-row justify-space-between">
+                        <p>Total Point Change:</p>
+                        <p id="composite-point-change">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Point Change:</p>
-                    <p id="composite-point-change">00</p>
-                    </div>
-                    <div class="flex-row">
-                    <p>Hours per Point:</p>
-                    <p id="composite-hours/point">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Hours per Point:</p>
+                        <p id="composite-hours/point">00</p>
                     </div>
                 </div>
                 </div>
                 <div class="score-box english">
                 <p id="english-score"></p>
                 <div class="tooltip">
-                    <div class="flex-row">
-                    <p>Goal:</p>
-                    <p id="english-goal">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Initial Score:</p>
+                        <p id="english-initial-score">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Hours:</p>
-                    <p id="english-total-hours">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Goal:</p>
+                        <p id="english-goal">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Highest Score:</p>
-                    <p id="english-highest-score">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Total Hours:</p>
+                        <p id="english-total-hours">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Initial Score:</p>
-                    <p id="english-initial-score">00</p>
+                    <!-- <div class="flex-row justify-space-between">
+                        <p>Highest Score:</p>
+                        <p id="english-highest-score">00</p>
+                    </div> -->
+                    <div class="flex-row justify-space-between">
+                        <p>Total Point Change:</p>
+                        <p id="english-point-change">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Point Change:</p>
-                    <p id="english-point-change">00</p>
-                    </div>
-                    <div class="flex-row">
-                    <p>Hours per Point:</p>
-                    <p id="english-hours/point">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Hours per Point:</p>
+                        <p id="english-hours/point">00</p>
                     </div>
                 </div>
                 </div>
                 <div class="score-box math">
                 <p id="math-score"></p>
                 <div class="tooltip">
-                    <div class="flex-row">
-                    <p>Goal:</p>
-                    <p id="math-goal">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Initial Score:</p>
+                        <p id="math-initial-score">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Hours:</p>
-                    <p id="math-total-hours">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Goal:</p>
+                        <p id="math-goal">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Highest Score:</p>
-                    <p id="math-highest-score">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Total Hours:</p>
+                        <p id="math-total-hours">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Initial Score:</p>
-                    <p id="math-initial-score">00</p>
+                    <!-- <div class="flex-row justify-space-between">
+                        <p>Highest Score:</p>
+                        <p id="math-highest-score">00</p>
+                    </div> -->
+                    <div class="flex-row justify-space-between">
+                        <p>Total Point Change:</p>
+                        <p id="math-point-change">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Point Change:</p>
-                    <p id="math-point-change">00</p>
-                    </div>
-                    <div class="flex-row">
-                    <p>Hours per Point:</p>
-                    <p id="math-hours/point">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Hours per Point:</p>
+                        <p id="math-hours/point">00</p>
                     </div>
                 </div>
                 </div>
                 <div class="score-box reading">
                 <p id="reading-score"></p>
                 <div class="tooltip">
-                    <div class="flex-row">
-                    <p>Goal:</p>
-                    <p id="reading-goal">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Initial Score:</p>
+                        <p id="reading-initial-score">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Hours:</p>
-                    <p id="reading-total-hours">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Goal:</p>
+                        <p id="reading-goal">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Highest Score:</p>
-                    <p id="reading-highest-score">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Total Hours:</p>
+                        <p id="reading-total-hours">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Initial Score:</p>
-                    <p id="reading-initial-score">00</p>
+                    <!-- <div class="flex-row justify-space-between">
+                        <p>Highest Score:</p>
+                        <p id="reading-highest-score">00</p>
+                    </div> -->
+                    <div class="flex-row justify-space-between">
+                        <p>Total Point Change:</p>
+                        <p id="reading-point-change">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Point Change:</p>
-                    <p id="reading-point-change">00</p>
-                    </div>
-                    <div class="flex-row">
-                    <p>Hours per Point:</p>
-                    <p id="reading-hours/point">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Hours per Point:</p>
+                        <p id="reading-hours/point">00</p>
                     </div>
                 </div>
                 </div>
                 <div class="score-box science">
                 <p id="science-score"></p>
                 <div class="tooltip">
-                    <div class="flex-row">
-                    <p>Goal:</p>
-                    <p id="science-goal">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Initial Score:</p>
+                        <p id="science-initial-score">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Hours:</p>
-                    <p id="science-total-hours">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Goal:</p>
+                        <p id="science-goal">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Highest Score:</p>
-                    <p id="science-highest-score">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Total Hours:</p>
+                        <p id="science-total-hours">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Initial Score:</p>
-                    <p id="science-initial-score">00</p>
+                    <!-- <div class="flex-row justify-space-between">
+                        <p>Highest Score:</p>
+                        <p id="science-highest-score">00</p>
+                    </div> -->
+                    <div class="flex-row justify-space-between">
+                        <p>Total Point Change:</p>
+                        <p id="science-point-change">00</p>
                     </div>
-                    <div class="flex-row">
-                    <p>Total Point Change:</p>
-                    <p id="science-point-change">00</p>
-                    </div>
-                    <div class="flex-row">
-                    <p>Hours per Point:</p>
-                    <p id="science-hours/point">00</p>
+                    <div class="flex-row justify-space-between">
+                        <p>Hours per Point:</p>
+                        <p id="science-hours/point">00</p>
                     </div>
                 </div>
                 </div>
