Less things are required

--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -41,11 +41,11 @@
                     <div class="input-row">
                         <div class="input-block">
                             <label for="parentFirstName" class="label">First Name:</label>
-                            <input id="parentFirstName" placeholder="John" class="input">
+                            <input id="parentFirstName" placeholder="John" class="input" required>
                         </div>
                         <div class="input-block">
                             <label for="parentLastName" class="label">Last Name: </label>
-                            <input id="parentLastName" placeholder="Doe" class="input">
+                            <input id="parentLastName" placeholder="Doe" class="input" required>
                         </div>
                     </div><br>
 
@@ -377,11 +377,11 @@
                     <div class="input-row">
                         <div class="input-block">
                             <label for="parentPhoneNumber" class="label">Phone Number:</label>
-                            <input id="parentPhoneNumber" placeholder="(123) 123-1234" class="input">
+                            <input id="parentPhoneNumber" placeholder="(123) 123-1234" class="input" required>
                         </div>
                         <div class="input-block">
                             <label for="parentEmail" class="label">Email Address:</label>
-                            <input id="parentEmail" placeholder="JohnDoe@WasatchTutors.com" class="input">
+                            <input id="parentEmail" placeholder="JohnDoe@WasatchTutors.com" class="input" required>
                         </div>
                     </div><br>
 
@@ -444,11 +444,11 @@
                     <div class="input-row">
                         <div class="input-block">
                             <label for="studentFirstName" class="label">First Name:</label>
-                            <input id="studentFirstName" placeholder="Jane" class="input">
+                            <input id="studentFirstName" placeholder="Jane" class="input" required>
                         </div>
                         <div class="input-block">
                             <label for="studentLastName" class="label">Last Name: </label>
-                            <input id="studentLastName" placeholder="Doe" class="input">
+                            <input id="studentLastName" placeholder="Doe" class="input" required>
                         </div>
                     </div>
 
@@ -459,7 +459,7 @@
                         </div>
                         <div class="input-block">
                             <label for="studentEmail" class="label">Email Address:</label>
-                            <input id="studentEmail" placeholder="JaneDoe@WasatchTutors.com" class="input">
+                            <input id="studentEmail" placeholder="JaneDoe@WasatchTutors.com" class="input" required>
                         </div>
                     </div>
 
