updated student email placeholder

--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -459,7 +459,7 @@
                         </div>
                         <div class="input-block">
                             <label for="studentEmail" class="label">Email Address:</label>
-                            <input id="studentEmail" placeholder="JaneDoe@WasatchTutors.com" class="input" required>
+                            <input id="studentEmail" placeholder="studentfirstlast@wasatchtutors.com" class="input" required>
                         </div>
                     </div>
 
