session notes go to the chat

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -298,9 +298,44 @@
 
         <div id="student-general-notes-div">
             <h2 class="label">General Notes</h2>
-            <div id="student-general-notes">
+            <div id="student-general-notes" class="student-notes">
             </div>
-            <textarea id="student-general-notes-input"></textarea>
+            <textarea id="student-general-notes-input" class="student-notes-input"></textarea>
+        </div>
+
+        <!------------------->
+        <!-- Section Notes -->
+        <!------------------->
+        <div id="student-section-notes" class="flex-row justify-space-evenly">
+            <div id="student-english-notes-div" class="section-notes-div">
+                <h2 class="label">English</h2>
+                <div id="student-english-notes" class="student-notes">
+                </div>
+                <textarea id="student-english-notes-input" class="student-notes-input"></textarea>
+            </div>
+
+            <div id="student-math-notes-div" class="section-notes-div">
+                <h2 class="label">Math</h2>
+                <div id="student-math-notes" class="student-notes">
+                </div>
+                <textarea id="student-math-notes-input" class="student-notes-input"></textarea>
+            </div>
+        </div>
+
+        <div id="student-section-notes" class="flex-row justify-space-evenly">
+            <div id="student-reading-notes-div" class="section-notes-div">
+                <h2 class="label">Reading</h2>
+                <div id="student-reading-notes" class="student-notes">
+                </div>
+                <textarea id="student-reading-notes-input" class="student-notes-input"></textarea>
+            </div>
+
+            <div id="student-science-notes-div" class="section-notes-div">
+                <h2 class="label">Science</h2>
+                <div id="student-science-notes" class="student-notes">
+                </div>
+                <textarea id="student-science-notes-input" class="student-notes-input"></textarea>
+            </div>
         </div>
     </section>
 
